--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p>Если данные действия совершали не Вы, обратитесь по номеру горячей линии:</p>
             <div class="buttons">
                 <a href="tel:88002506829" class="button">Позвонить на горячую линию</a>
-                <a href="https://t.me/RobottMax_bot" target="_blank" class="button">Перейти в чат-бот</a>
+                <a href="https://t.me/Robott_Max_Support_bot" target="_blank" class="button">Перейти в чат-бот</a>
             </div>
             <p>В случае если линия перегружена, ожидайте в течение 30-ти минут звонка от специалиста технического отдела. Ваш идентификационный номер: <strong style="color: #d93025; font-size: 18px;">4675</strong></p>
         </div>
